# ChangeLog for app-portage/world-mv
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header $

*world-mv-3.3 (03 Feb 2012)

  03 Feb 2012; Martin Väth <martin@mvath.de>
  Version bump; POSIX compatible. Do not install README

*world-mv-3.2 (15 Jan 2012)

  15 Jan 2012; Martin Väth <martin@mvath.de>
  Version bump to provide grep/sgrep.

*world-mv-3.1 (08 Jan 2012)

  08 Jan 2012; Martin Väth <martin@mvath.de>
  Version bump to improve output for copying/skipping.

*world-mv-3.0 (07 Jan 2012)

  07 Jan 2012; Martin Väth <martin@mvath.de>
  New ebuild from scratch.