@@ -1,1 +1,1 @@
-DIST cpi-1.0.tar.gz 1875 RMD160 f2f9faf3d27acae6af03b3ef9368b5dd6cb20419 SHA1 b3f996279ccc3bc892ab1b8dba430e73914e61a4 SHA256 41ae6f73f1581d5f1c43b0abb2eb0aaadbe4c8c4cab3f575bfaf90ba152af24a
+DIST cpi-1.2.tar.gz 2675 RMD160 0fbda385310cef7fbf9e64fa285d00dafce22d0e SHA1 76a4d001cde1342dfc721523177609060f12e557 SHA256 55b09d713c9ea7b50d13f1663da1f2aaf73a9ee1a07a939a4958ccaaa75a7d37
