@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
 
+*world-mv-3.4 (05 Feb 2012)
+
+  05 Feb 2012; Martin Väth <martin@mvath.de>
+  Version bump, remove old ebuild.
+
 *world-mv-3.3 (03 Feb 2012)
 
   03 Feb 2012; Martin Väth <martin@mvath.de>
